# search_engine

./: .gitignore  CMakeLists.txt  README.md
configs/: answers.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h  utils.h
resources/: file001.txt  file002.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
